# DataBull

./: .gitignore  CLAUDE_starter.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  device.py  reading.py  user.py
backend/tests/: conftest.py  test_health.py  test_models.py  test_schema.py
docs/: SIMULATOR.md  SPEC.md
evals/: cases.yaml  runner.py
frontend/: package.json
